# droid

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
droid/: __init__.py  cli.py  droid.py  server.py
droid/email/: __init__.py  core.py
droid/jobs/: __init__.py  core.py  exceptions.py  job.py  manager.py
droid/slack/: __init__.py  core.py
droid/templates/: base.html  index.html
droid/utils/: conversions.py  importer.py  requests.py
scripts/: format  pre-commit  release  test
tests/: bot.py  test_droid.py
tests/jobs/: test.yml
